--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,127 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Header from "../components/Header.astro";
+import Sidebar from "../components/Sidebar.astro";
+import Layout from "../layouts/Layout.astro";
+import EmailCopy from "../components/EmailCopy.astro";
 ---
 
-<Layout>
-	<Welcome />
+<Layout title="Luis Torri">
+  <html>
+    <Header title="Sam Bernstein" />
+    <body>
+      <div class="content">
+        <Sidebar selectedItem="home" />
+        <nav class="main">
+          <div class="container">
+            <main class="fold-content-container">
+              <div class="fold-content">
+                <h1>Hola, soy Luis 👋<br />Desarrollador Frontend</h1>
+                <p class="lead">
+                  He trabajado en multiples proyecto usando las siguientes
+                  tecnologías: <br /> React, Angular, Astro, Tailwind CSS, TypeScript,
+                  JavaScript, HTML y CSS.
+                </p>
+              </div>
+              <section class="nav-buttons-container">
+                <div>
+                  <a
+                    href="https://www.linkedin.com/in/luis-torri/"
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    class="button w-button">LinkedIn</a
+                  >
+                </div>
+                <div>
+                  <a
+                    href="https://github.com/luistorri"
+                    rel="noopener noreferrer"
+                    target="_blank"
+                    class="button w-button">GitHub</a
+                  >
+                </div>
+                <div class="button w-button">
+                  <EmailCopy email="torriluis12@gmail.com" />
+                </div>
+              </section>
+            </main>
+            <div class="projects-section">
+              <!-- Software Development -->
+              <a href="/software-development" class="projects-container">
+                <div class="single-projects-category">
+                  <div class="projects-category-image-container">
+                    <img
+                      src="./assets/browser.svg"
+                      loading="lazy"
+                      alt=""
+                      class="projects-category-image"
+                    />
+                  </div>
+                </div>
+                <div class="single-projects-content">
+                  <h4>Software Development</h4>
+                  <div class="tech-tools-container">
+                    <div class="mini-label-white gray-color">
+                      Technologies &amp; tools
+                    </div>
+                    <div class="chips-container chips-container-small-width">
+                      <div class="single-chip small-chip">React</div>
+                      <div class="single-chip small-chip">Next.js</div>
+                      <div class="single-chip small-chip">Node.js</div>
+                      <div class="single-chip small-chip">MongoDB</div>
+                      <div class="single-chip small-chip">Heroku</div>
+                      <div class="single-chip small-chip">RabbitMQ</div>
+                      <div class="single-chip small-chip">Express.js</div>
+                      <div class="single-chip small-chip">TypeScript</div>
+                      <div class="single-chip small-chip">NestJS</div>
+                      <div class="single-chip small-chip">Angular</div>
+                      <div class="single-chip small-chip">Postgres</div>
+                      <div class="single-chip small-chip">Linode</div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <!-- DevOps & Cloud -->
+              <a href="/devops" class="projects-container">
+                <div class="single-projects-category">
+                  <div class="projects-category-image-container devops-img">
+                    <img
+                      src="./assets/database.svg"
+                      loading="lazy"
+                      alt=""
+                      class="projects-category-image"
+                    />
+                  </div>
+                </div>
+                <div class="single-projects-content">
+                  <h4>DevOps &amp;&nbsp;Cloud</h4>
+                  <div class="tech-tools-container">
+                    <div class="mini-label-white gray-color">
+                      Technologies &amp; tools
+                    </div>
+                    <div class="chips-container chips-container-small-width">
+                      <div class="single-chip small-chip">Terraform</div>
+                      <div class="single-chip small-chip">Azure</div>
+                      <div class="single-chip small-chip">AWS</div>
+                      <div class="single-chip small-chip">Docker</div>
+                      <div class="single-chip small-chip">Kubernetes</div>
+                      <div class="single-chip small-chip">GitLab CI/CD</div>
+                      <div class="single-chip small-chip">RKE</div>
+                      <div class="single-chip small-chip">Node.js</div>
+                      <div class="single-chip small-chip">RabbitMQ</div>
+                      <div class="single-chip small-chip">Linux</div>
+                      <div class="single-chip small-chip">Bash</div>
+                      <div class="single-chip small-chip">Grafana</div>
+                      <div class="single-chip small-chip">Prometheus</div>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+    </body>
+  </html>
 </Layout>
