--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -22,7 +22,6 @@ const { selectedItem } = Astro.props;
         />
         <div>
           <div class="label-white">Luis Torri</div>
-          <div class="label-gray">Desarrollador Frontend</div>
         </div>
       </div>
     </a>
@@ -57,9 +56,9 @@ const { selectedItem } = Astro.props;
           alt=""
           class="nav-link-image"
         />
-        <div>Experiencia laboral</div>
+        <div>Experiencia</div>
       </a>
-      <a
+      <!-- <a
         href="/personal-projects"
         class={`nav-link-container w-inline-block ${
           selectedItem === "personal-projects" ? "w--current" : ""
@@ -72,7 +71,7 @@ const { selectedItem } = Astro.props;
           class="nav-link-image"
         />
         <div>Personal projects</div>
-      </a>
+      </a> -->
     </nav>
 
     <div
