--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,92 +5,90 @@ import Layout from "../layouts/Layout.astro";
 import EmailCopy from "../components/EmailCopy.astro";
 ---
 
-<Layout title="Luis Torri">
-  <html>
-    <Header title="Luis Torri" />
-    <body>
-      <div class="content">
-        <Sidebar selectedItem="home" />
-        <nav class="main">
-          <div class="container">
-            <main class="fold-content-container">
-              <div class="fold-content">
-                <h1>
-                  Soy Desarrollador Frontend <br /> Y me gusta construir cosas interesantes
-                  para la web.
-                </h1>
-                <p class="lead">
-                  Actualmente trabajo como Desarrollador Frontend aplicando mis
-                  conocimientos en React y Angular para crear soluciones web
-                  prácticas y funcionales. Mi enfoque está en combinar lógica,
-                  diseño y rendimiento para desarrollar sistemas claros y
-                  mantenibles que cumplan con los objetivos establecidos.
-                </p>
-              </div>
-              <section class="nav-buttons-container">
-                <div>
-                  <a
-                    href="https://www.linkedin.com/in/luis-torri/"
-                    rel="noopener noreferrer"
-                    target="_blank"
-                    class="button w-button">LinkedIn</a
-                  >
-                </div>
-                <div>
-                  <a
-                    href="https://github.com/luistorri"
-                    rel="noopener noreferrer"
-                    target="_blank"
-                    class="button w-button">GitHub</a
-                  >
-                </div>
-                <div id="copy-email-btn" class="button w-button">
-                  <EmailCopy email="torriluis12@gmail.com" />
-                </div>
-              </section>
-            </main>
-            <div class="projects-section">
-              <!-- Software Development -->
-              <a href="/software-development" class="projects-container">
-                <div class="single-projects-category">
-                  <div class="projects-category-image-container">
-                    <img
-                      src="./assets/browser.svg"
-                      loading="lazy"
-                      alt=""
-                      class="projects-category-image"
-                    />
-                  </div>
-                </div>
-                <div class="single-projects-content">
-                  <h4>G&L Group - Actualmente</h4>
-                  <div class="tech-tools-container">
-                    <div class="mini-label-white gray-color">
-                      Tecnologías &amp; herramientas
-                    </div>
-                    <div class="chips-container chips-container-small-width">
-                      <div class="single-chip small-chip">React</div>
-                      <div class="single-chip small-chip">Angular</div>
-                      <div class="single-chip small-chip">TypeScript</div>
-                      <div class="single-chip small-chip">JavaScript</div>
-                      <div class="single-chip small-chip">Tailwind CSS</div>
-                      <div class="single-chip small-chip">Node.js</div>
-                      <div class="single-chip small-chip">Git</div>
-                      <div class="single-chip small-chip">GitHub</div>
-                      <div class="single-chip small-chip">GitLab</div>
-                      <div class="single-chip small-chip">Postman</div>
-                    </div>
-                  </div>
-                </div>
-              </a>
+<Layout title="Inicio">
+  <Header title="Luis Torri" />
+  <body>
+    <div class="content">
+      <Sidebar selectedItem="home" />
+      <nav class="main">
+        <div class="container">
+          <main class="fold-content-container">
+            <div class="fold-content">
+              <h1>
+                Soy Desarrollador Frontend <br /> Y me gusta construir cosas interesantes
+                para la web.
+              </h1>
+              <p class="lead">
+                Actualmente trabajo como Desarrollador Frontend aplicando mis
+                conocimientos en React y Angular para crear soluciones web
+                prácticas y funcionales. Mi enfoque está en combinar lógica,
+                diseño y rendimiento para desarrollar sistemas claros y
+                mantenibles que cumplan con los objetivos establecidos.
+              </p>
             </div>
+            <section class="nav-buttons-container">
+              <div>
+                <a
+                  href="https://www.linkedin.com/in/luis-torri/"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  class="button w-button">LinkedIn</a
+                >
+              </div>
+              <div>
+                <a
+                  href="https://github.com/luistorri"
+                  rel="noopener noreferrer"
+                  target="_blank"
+                  class="button w-button">GitHub</a
+                >
+              </div>
+              <div id="copy-email-btn" class="button w-button">
+                <EmailCopy email="torriluis12@gmail.com" />
+              </div>
+            </section>
+          </main>
+          <div class="projects-section">
+            <!-- Software Development -->
+            <a href="/software-development" class="projects-container">
+              <div class="single-projects-category">
+                <div class="projects-category-image-container">
+                  <img
+                    src="./assets/browser.svg"
+                    loading="lazy"
+                    alt=""
+                    class="projects-category-image"
+                  />
+                </div>
+              </div>
+              <div class="single-projects-content">
+                <h4>G&L Group - Actualmente</h4>
+                <div class="tech-tools-container">
+                  <div class="mini-label-white gray-color">
+                    Tecnologías &amp; herramientas
+                  </div>
+                  <div class="chips-container chips-container-small-width">
+                    <div class="single-chip small-chip">React</div>
+                    <div class="single-chip small-chip">Angular</div>
+                    <div class="single-chip small-chip">TypeScript</div>
+                    <div class="single-chip small-chip">JavaScript</div>
+                    <div class="single-chip small-chip">Tailwind CSS</div>
+                    <div class="single-chip small-chip">Node.js</div>
+                    <div class="single-chip small-chip">Git</div>
+                    <div class="single-chip small-chip">GitHub</div>
+                    <div class="single-chip small-chip">GitLab</div>
+                    <div class="single-chip small-chip">Postman</div>
+                  </div>
+                </div>
+              </div>
+            </a>
           </div>
-        </nav>
-      </div>
+        </div>
+      </nav>
+    </div>
 
-      <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
-    </body>
-  </html>
+    <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+  </body>
 </Layout>
 
 <script>
